first commit with ron quotes

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@
   # the root website directory
   command = "echo 'I be building' "
   # the build command
+
+[[redirects]]
+  from = "/api/ron/*"
+  to = "https://ron-swanson-quotes.herokuapp.com/v2/:splat"
+  status = 200
