--- a/netlify.toml
+++ b/netlify.toml
@@ -16,3 +16,8 @@
   from = "/api/yes"
   to = "/.netlify/functions/yep"
   status = 200
+
+[[redirects]]
+  from = "/api/octo"
+  to = "/.netlify/functions/octo"
+  status = 200
